--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>      
     <div class="my">
     <div class="card mx-auto" style="max-width: 80%;" >
-        <h5 class="card-header bg-theme text-white">WELCOME, <script>document.write(sessionStorage.getItem("name").toUpperCase());</script> <span id="timer" class="float-right">00:00</span></h5>
+        <h5 class="card-header bg-theme text-white">WELCOME, <script>document.write(sessionStorage.getItem("name").toUpperCase());</script> 
         <div class="card-body">
        
 
